maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for(x <- 0 to Largeur-1,y <- 0 to Hauteur-1) {
  ^ShortestPathMaze:29: error: ')' expected but ',' found.
    for (X <- 1 to Largeur-1,Y <- 1 to Hauteur-1) {
                            ^ShortestPathMaze:80: error: illegal start of simple expression
  }
  ^